feat: add yandex.metrika counter

--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>FRALOU Web Developer</title>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(96858969, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/96858969" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -18,8 +38,8 @@
             <div class="header__wrapper">
                 <div class="header__name">
                     <h1 class="header__title"><a href="https://github.com/maxfralou"
-                            class="header__status-link">Фролов<br>Максим<br><span
-                                class="header__status">Web-разработчик</span></a></h1>
+                            class="header__status-link">Фролов<br>Максим<br><span class="header__status">Web
+                                Developer</span></a></h1>
                 </div>
             </div>
         </div>
@@ -30,7 +50,7 @@
             <div class="main__wrapper">
                 <section class="main__about" id="about">
                     <h2 class="main__about-title">Кратко обо мне</h2>
-                    <p class="main__about-desc">Здравствуйте! Меня зовут Максим, я web-разработчик.</p>
+                    <p class="main__about-desc">Здравствуйте! Меня зовут Максим, я web developer.</p>
                 </section>
 
                 <section class="main__create" id="create">
